Window displays unnecessary paddings and scrollbars around iframes. Fixes #2602

--- a/styles/web/common-template.less
+++ b/styles/web/common-template.less
@@ -783,6 +783,12 @@ div.k-window-content
     outline: 0;
 }
 
+div.k-window-iframecontent
+{
+    padding: 0;
+    overflow: visible;
+}
+
 .k-window-content > .km-scroll-container
 {
     height:100%;
